--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NVC Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The Place" />
+    <link href="styles/main.css" rel="stylesheet" />
+    <title>The Place</title>
 </head>
+
 <body>
-    <h1>Main Page</h1>
+    <header class="navigation">
+        <nav>
+            <a href="/index.html" class="anchor">THE PLACE</a>
+            <a href="/welcome">WELCOME</a>
+            <a href="/menu" class="active">MENU</a>
+            <a href="/reservations" class="active">RESERVATIONS</a>
+            <a href="/news" class="active">NEWS</a>
+            <a href="/contact" class="active">CONTACT</a>
+        </nav></header>
+
+        <main class="main">
+            <section class="section">
+            <h1 class="pretitle">DISCOVER</h1>
+            <h2 class="title">OUR STORY</h2>
+            <figure class="smallstar">
+                <img src="assets/Star.png" alt="small star" />
+            <p class="paragraph">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+            <nav>
+                <a href="/about us">ABOUT US</a>
+            </nav>
+            </section>
+        </main>
+        <figure class="figure">
+            <img src="assets/our-story.jpg" alt="dining room">
+        <footer class="close">
+            <p>
+             Copyright © Deigned with love by me                            Permissions and Copright | Contact the Team
+            </p>
+        </footer>
 </body>
-</html>
